--- a/package.json
+++ b/package.json
@@ -15,16 +15,28 @@
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
     "mocha": "^5.0.5",
+    "nodemon": "^1.17.3",
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "assert": "^1.4.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
+    "consolidate": "^0.15.1",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.2.0",
+    "mongodb": "^3.0.5",
+    "mongoose": "^5.0.12",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^4.37.5",
+    "sqlite3": "^4.0.0",
+    "ttn": "^1.3.2"
   }
 }
