--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "assert": "^1.4.1",
+    "bcrypt": "^1.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^8.2.0",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.12",
+    "mqtt": "^2.17.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
